--- a/css/styles.css
+++ b/css/styles.css
@@ -131,7 +131,7 @@ section nav ul li {
 /* Footer Styling */
 .footer {
   background-color: #f9f9f9; /* Darker accent color */
-  color: #999;
+  color: black;
   text-align: left;
   padding: 20px;
   font-size: 0.8rem;
